# project_Luzanchuk_B25-515

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
data/: news.json  news.jsonl  web_news.jsonl
src/: app.py  async_app.py  bot.py  hybrid_app.py  main.py  main_async.py  main_hybrid.py  runner.py  task_manager.py
src/config/: config.py
src/factories/: source_factory.py
src/models/: data_item.py
src/parsers/: web_parser.py
src/presenters/: console_presenter.py
src/processors/: base_processor.py  text_processor.py
src/sources/: async_base_source.py  async_demo_source.py  async_file_source.py  async_web_source.py  base_source.py  file_source.py  mock_source.py
src/strategies/: base_strategy.py  filter_strategy.py  heavy_processing.py  normalization_strategy.py
tests/: conftest.py  test_hybrid.py  test_models.py  test_parsers.py  test_sources.py  test_strategies.py
