[project]
name = "project-luzanchuk-b25-515"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "python-telegram-bot[job-queue]>=22.7",
    "requests>=2.32.5",
]
authors = [{ name = "Luzanchuk Victor"}]

[project.scripts]
myproject = "src.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 256
target-version = "py311"
select = ["E", "F", "I"]
